# say_yes

say_yes/: AlreadyChosen.qml  CMakeLists.txt  Fireworks.qml  Question.qml  main.cpp  main.qml  qml.qrc  questionreader.cpp  questionreader.h  questions.json  settingsmanager.cpp  settingsmanager.h
